# ogym

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md  backlog.config.yml  build.rs  todos.md  tree
.github/: RELEASE_NOTE.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmark/: .gitignore  Cargo.toml  Justfile  README.md  gym_benchmarks.py  pyproject.toml  visualize.py  visualize_results.py
benchmark/analysis/: visualize_results.py
benchmark/gym_benchmarks/: acrobot_gym.py  ant_gym.py  cartpole_gym.py  half_cheetah_gym.py  hopper_gym.py  mountain_car_gym.py  pendulum_gym.py  walker2d_gym.py
benchmark/results/: all_results.json  all_results.md  ant.json
benchmark/src/: acrobot_bench.rs  ant_bench.rs  bipedal_walker_bench.rs  cartpole_bench.rs  half_cheetah_bench.rs  hopper_bench.rs  humanoid_bench.rs  humanoid_standup_bench.rs  inverted_double_pendulum_bench.rs  inverted_pendulum_bench.rs  lunar_lander_bench.rs  main.rs  mountain_car_bench.rs  pendulum_bench.rs  pusher_bench.rs  reacher_bench.rs  swimmer_bench.rs  toy_text_bench.rs  walker2d_bench.rs
benchmark/utils/: gym_benchmarks.py  main.py
docs/: book.toml
docs/backlog/tasks/: task-1 - Fix-BipedalWalker-legs-joints-never-constructed-actions-are-no-op.md  task-10 - Fix-mujoco-reset-panic-when-reset_noise_scale-is-0.0.md  task-11 - Consolidate-and-redesign-benchmarks.md  task-12 - Align-GitHub-automation-and-crate-publishing-metadata.md  task-13 - Migrate-README-content-into-mdBook.md  task-14 - Add-root-Justfile-and-portable-MuJoCo-loader.md  task-15 - Deduplicate-benchmark-Justfile-recipes.md  task-16 - Wire-root-MuJoCo-development-recipes.md  task-17 - Decouple-non-MuJoCo-benchmarks-from-MuJoCo.md  task-2 - Fix-mujoco-Pusher-wrong-obs-dim-and-wrong-body-indices.md  task-3 - Fix-mujoco-Reacher-wrong-obs-dim-and-off-by-one-body-index.md  task-4 - Fix-mujoco-truncation-9-of-11-envs-cap-on-sim-seconds-not-steps.md  task-5 - Rewrite-InvertedDoublePendulum-reward-obs-to-match-Gymnasium.md  task-6 - Fix-LunarLander-resetseed-ignored-is_terminal-inconsistent-with-step.md  task-7 - Implement-Gymnasium-Toy-Text-env-family-FrozenLake-Taxi-Blackjack-CliffWalking.md  task-8 - Implement-Gymnasium-CarRacing-rapier-Box2D-family.md  task-9 - Fix-broken-mujoco-rust-mujoco-rs-sys-dependency-pairing-crate-doesnt-compile.md
docs/src/: SUMMARY.md  api-reference.md  architecture.md  contributing.md  environments.md  getting-started.md  introduction.md  roadmap.md
docs/src/architecture/: backends.md  core-abstractions.md  implementing-environments.md  spaces.md
docs/src/environments/: classic-control.md  conventions.md  mujoco.md  rapier.md  toy-text.md
docs/src/environments/classic-control/: acrobot.md  cart-pole.md  (+2 more)
src/: lib.rs
src/env/: batch.rs  error.rs  mod.rs  sbatch.rs  single.rs
src/env/control/: mod.rs
src/env/environment/: error.rs  experience.rs  mod.rs  sbatch.rs  single.rs  terminal.rs
src/env/mujoco/: mjenv.rs  mod.rs  wrapper.rs
src/env/rapier/: mod.rs  utils.rs  world.rs
src/env/toy_text/: mod.rs
src/spaces/: boxed.rs  continuous.rs  discrete.rs  error.rs  mixed.rs  mod.rs  multi_discrete.rs  space.rs
tests/: main.rs
tests/env/environment/: batch.rs  error.rs  experience.rs  mod.rs  sbatch.rs  single.rs  terminal.rs
tests/spaces/: mixed.rs  mod.rs  space_trait.rs  test_boxed.rs  test_discrete.rs  test_multidiscrete.rs
(+106 files in other folders)
