[package]
name = "ogym"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Mahyar Riazati <mhyrzt@gmail.com>"]
description = "Composable, type-safe reinforcement learning environments for Rust"
repository = "https://github.com/mhyrzt/ogym"
readme = "README.md"
license = "MIT"
keywords = ["reinforcement", "gym", "machine-learning", "simulation", "robotics"]
categories = ["science", "algorithms", "simulation"]
documentation = "https://docs.rs/ogym"
publish = ["crates-io"]

include = ["/src/**", "/build.rs", "/README.md", "/LICENSE"]

[features]
default = []
mujoco = ["dep:mujoco-rs-sys", "dep:mujoco-rust"]

[dependencies]
nalgebra = "0.33.2"
mujoco-rs-sys = { version = "0.0.4", optional = true }
mujoco-rust = { version = "0.0.6", optional = true }
rand = "0.9.1"
rand_distr = "0.5"
rapier2d = { version = "0.26.1", features = ["simd-stable"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
approx = "0.5.1"
serde_json = "1.0"

# mujoco-rust 0.0.6 (crates.io) targets the pre-3.0 MuJoCo mjVFS C API, which
# no longer exists in MuJoCo 3.x (see vendor/mujoco-rust/src/vfs.rs). Patched
# locally until upstream (github.com/MuJoCo-Rust/MuJoCo-Rust) fixes it.
[patch.crates-io]
mujoco-rust = { path = "vendor/mujoco-rust" }
